# outlays

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_TASKS.md  CLAUDE.md  LICENSE  Makefile  NOTES.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/src/: AnchorRegistry.sol  Placeholder.sol
contracts/test/: AnchorRegistry.t.sol
core/: go.mod  go.sum
core/migrations/: 00001_schema.sql  00002_append_only.sql  00003_roles.sql  00004_seed.sql  00005_control_total_scope.sql  00006_parquet_export.sql  00007_lead_events.sql  00008_run_anchor.sql  00009_us_fed_schemes.sql  README.md  embed.go
data/cofog/: README.md  us-ca-procurement.json
deploy/: docker-compose.yml
docs/: DEVELOPING.md  architecture-risk-register.md  bulk-ingestion-plan.md  cofog-references.md  data-quality-lead-safety.md  feasibility-healthcare-crosscut.md  federated-submission-verification.md  leads-methodology.md  licensing-matrix.md  openapi.yaml  publication-practices.md  research-brief.md  zktls-fetch-proofs.md
docs/sources/: README.md  (+6 more)
py/adapter_sdk/: pyproject.toml
py/adapter_sdk/src/adapter_sdk/: __init__.py  hashing.py  run.py  snapshot.py
py/adapter_sdk/src/adapter_sdk/contract/: __init__.py  models.py  validate.py
py/adapter_sdk/src/adapter_sdk/examples/: __init__.py  toy_fixture.py
py/adapter_sdk/tests/: test_contract.py  test_toy_conformance.py
scripts/: bootstrap-db.sh  check-drift.sh  codegen.sh  conformance.sh  e2e_anchor_local.sh  verify_anchor.py  wait-for-services.sh
(+39 files in other folders)
