[project]
name = "adapter-sdk"
version = "0.0.0"
description = "Python adapter SDK for Outlays (Pydantic v2)."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7",
    "jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adapter_sdk"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.25",
    "pytest>=8.0",
]

[tool.uv]
# CI runs `uv sync`; the pinned interpreter is 3.12 (Section 2).
